syntax = "proto3";

import "Protos/models.proto";

option csharp_namespace = "IdiomsService.Protos";

package idiom;

service Action {
  rpc AddUpvote (AddUpvoteRequest) returns (UpvoteReply);
  rpc DeleteUpvote (DeleteUpvoteRequest) returns (DeleteReply);
  rpc AddFavorite (AddFavoriteRequest) returns (FavoriteReply);
  rpc DeleteFavorite (DeleteFavoriteRequest) returns (DeleteReply);
  rpc AddReport (AddReportRequest) returns (ReportReply);
  rpc AddComment (AddCommentRequest) returns (CommentReply);
  rpc ChangeComment (ChangeCommentRequest) returns (CommentReply);
  rpc DeleteComment (DeleteCommentRequest) returns (DeleteReply);
  rpc RequestTranslation (RequestTranslationRequest) returns (RequestTranslationReply);
  rpc GetAllLanguages (GetAllLanguagesRequest) returns (GetAllLanguagesResponse);
  rpc AddCommentLike (AddCommentLikeRequest) returns (AddCommentLikeResponse);
  rpc DeleteCommentLike (DeleteCommentLikeRequest) returns (DeleteCommentLikeResponse);
  rpc GetLinkTypes (GetLinkTypesRequest) returns (GetLinkTypesReply);
}

message GetLinkTypesRequest {
}

message GetLinkTypesReply {
  repeated LinkReply links = 1;
}

message LinkReply {
  int32 link_type_id = 1;
  string link_name = 2;
}

message AddUpvoteRequest {
  int32 idiom_id = 1;
  bool is_upvote = 2;
}

message DeleteUpvoteRequest {
  int32 idiom_id = 1;
}

message AddFavoriteRequest {
  int32 idiom_id = 1;
}

message DeleteFavoriteRequest {
  int32 idiom_id = 1;
}

message AddReportRequest {
  int32 idiom_id = 1;
  string text = 2;
}

message AddCommentRequest {
  int32 idiom_id = 1;
  string text = 2;
}

message ChangeCommentRequest {
  int32 comment_id = 1;
  string text = 2;
}

message DeleteCommentRequest {
  int32 comment_id = 1;
}

message RequestTranslationRequest {
  int32 idiom_id = 1;
  int32 language_id = 2;
}

message GetAllLanguagesRequest {
}

message DeleteReply {
  string result = 1;
}

message UpvoteReply {
  int32 upvote_id = 1;
  int32 idiom_id = 2;
  int32 user_id = 3;
  bool is_upvote = 4;
}

message FavoriteReply {
  int32 favorite_id = 1;
  int32 idiom_id = 2;
  int32 user_id = 3;
}

message ReportReply {
  int32 report_id = 1;
  int32 idiom_id = 2;
  int32 user_id = 3;
  string text = 4;
}

message RequestTranslationReply {
  int32 request_id = 1;
  int32 idiom_id = 2;
  int32 language_id = 3;
  int32 user_id = 4;
}

message GetAllLanguagesResponse {
  repeated LanguageReply languages = 1;
}

message AddCommentLikeRequest {
  int32 comment_id = 1;
  bool is_like = 2;
}

message AddCommentLikeResponse {
  bool is_successful = 1;
}

message DeleteCommentLikeRequest {
  int32 comment_id = 1;
}

message DeleteCommentLikeResponse {
  bool is_removed = 1;
}
